<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">约吧</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="mobilePhone">手机号</string>
	<string name="username">用户名:</string>
	<string name="password">密码</string>
	<string name="login">登录</string>
	<string name="register">注册</string>
	<string name="verify">请输入验证码</string>
	<string name="get">获取验证码</string>
</resources>
