<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <EditText
        android:id="@+id/mobilePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobilePhone" 
        android:inputType="phone"
        android:layout_marginTop="15pt"/>
    <EditText 
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button 
        android:id="@+id/loginBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="10pt"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:onClick="goLogin"
        android:clickable="false"
        android:background="#8080ff"
       />

</LinearLayout>
